cambio en creacion de arrays para test